<resources>
    <string name="app_name">BookStoreApp</string>

    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplierName">Supplier Name</string>
    <string name="supplierPhone">Supplier Phone Number</string>

    <string name="bookInfo">Book Info</string>
    <string name="supplierInfo">Supplier Info</string>

    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sale">Sale</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>

    <string name="default_value">0</string>

    <string name="empty">No books yet..</string>
    <string name="instructions">Go ahead and add some books.</string>
    <string name="populate_views">Make sure to include the name, price and quantity</string>

    <string name="action_delete_all_entries">Delete All</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <string name="add_book">Add Book</string>
    <string name="edit_book">Edit Book</string>

    <string name="save_success">Book Saved</string>
    <string name="save_error">Error saving book</string>

    <string name="delete_dialog_msg">Delete this book?</string>

    <string name="editor_delete_pet_failed">Error deleting book</string>
    <string name="editor_delete_pet_successful">Book deleted</string>

    <string name="invalid_name">Book requires a name</string>

    <string name="unit">$</string>

    <string name="order">Order</string>

</resources>
