<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Book Name and Price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/bookInfo"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/price"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Quantity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/quantity"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="36sp"
            android:padding="5dp"
            android:text="@string/minus"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="36sp"
            android:padding="5dp"
            android:text="@string/plus"/>

    </LinearLayout>
    <!-- Supplier Name and Phone Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/supplierInfo"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/supplierName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/supplierPhone"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>